--- a/index.html
+++ b/index.html
@@ -7,7 +7,44 @@
     <title>Pacman</title>
     <link rel="stylesheet" href="./styles.scss">
 
+<style>
+  body {
+    background-color: black;
+}
+  
+#pacman {
+    height: 470px;
+    width: 382px;
+    border-radius: 5px;
+    margin: 20px auto;
+}
 
+h1 {
+    font-family: "Permanent Marker", cursive;
+    text-align: center;
+    align-items: center;
+    color: yellow;
+}
+h2 {
+    font-family: "Permanent Marker", cursive;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: yellow;
+}
+
+body {
+    width: 342px;
+    margin: 0px auto;
+    font-family: sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: #0000ff;
+}
+
+</style>
 </head>
 <body>
 
