--- a/index.html
+++ b/index.html
@@ -5,13 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pacman</title>
-    <link rel="stylesheet" href="./styles.scss">
+    <link rel="stylesheet" href="./styles.css">
 
+<style>
+  body {
+    background-color: black;
+}
+  
+#pacman {
+    height: 470px;
+    width: 382px;
+    border-radius: 5px;
+    margin: 20px auto;
+}
 
+h1 {
+    font-family: "Permanent Marker", cursive;
+    text-align: center;
+    align-items: center;
+    color: yellow;
+}
+h2 {
+    font-family: "Permanent Marker", cursive;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: yellow;
+}
+
+body {
+    width: 342px;
+    margin: 0px auto;
+    font-family: sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: #0000ff;
+}
+
+</style>
 </head>
 <body>
 
-  <h1>Pacman proyect</h1>
+  <h1>Pacman JS</h1>
 
   <div id="pacman"></div>
 
@@ -27,5 +64,6 @@
       el.innerHTML = "make you a favor, get a real browser";
     }
   </script>
+  <h1>S= sound P=pause</h1>
 </body>
 </html>
