--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a {
     var el = document.getElementById("pacman");
     if (Modernizr.canvas && Modernizr.localstorage && 
         Modernizr.audio && (Modernizr.audio.ogg || Modernizr.audio.mp3)) {
-      window.setTimeout(function () { PACMAN.init(el, "https://github.com/giramaso/pacman/edit/master/"); }, 0);
+      window.setTimeout(function () { PACMAN.init(el, "./"); }, 0);
     } else { 
       el.innerHTML = "make you a favor, get a real browser";
     }
